--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,10 @@ var/
 # Django
 *.log
 local_settings.py
-db.sqlite3
+# db.sqlite3
 db.sqlite3-journal
-media/
-static/
+# media/
+# static/
 
 # Virtual Environment
 venv/
